kubernetes/apps/home-assistant/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`homeassistant.sobrinho.pt`)
      kind: Rule
      services:
        - name: home-assistant
          port: http
    - match: Host(`homeassistant.cs.sobrinho.pt`)
      kind: Rule
      services:
        - name: home-assistant-codeserver
          port: codeserver
  tls:
    secretName: home-assistant-cert
